flex/flex-tests/testData/js2_highlighting/ReportMissingReturnFix.js2
function foo():int {<error descr="Missing return statement">}</error>